# Splitter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yml  pyproject.toml
alembic/: README  env.py
app/: main.py
src/app/: main.py
src/app/core/: config.py  database.py
src/app/models/: __init__.py  expense.py  group.py  group_user.py  group_user_expense.py  user.py
src/app/routers/: expenses.py  groups.py  users.py
src/app/schemas/: __init__.py  expense.py  group.py  group_user.py  group_user_expense.py  user.py
tests/: run_all_tests.py  test_api.py  test_complete.py  test_docker_integration.py  test_integration.py  test_unit.py  test_workflows.py
